correction contrastes, ajout de Label, ajouts de alt, dernière correction heading

--- a/DW+P4+sources+site+La+Panthere (2)/Starting website 2/css/bootstrap.css
+++ b/DW+P4+sources+site+La+Panthere (2)/Starting website 2/css/bootstrap.css
@@ -7689,7 +7689,7 @@ button.close {
     background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
@@ -8080,35 +8080,3 @@ button.close {
     }
 }
 
-.citation{
-    font-family:helvetica,arial,sans-serif;
-    max-width:540px;
-    font-size:20px;
-    font-style:italic;
-    font-weight:300;
-    margin:auto;
-    margin-bottom:5px;
-    line-height:22px;
-}
-
-.profile_ceo{
-    font-family:helvetica,arial,sans-serif;
-    font-size:18px;
-    font-weight:lighter;
-}
-.row_text{
-    font-size:22px;
-    font-family: helvetica, arial, sans-serif;
-    font-weight:400;
-    max-width:65%;
-    margin:auto;
-    margin-bottom:10px;
-}
-.row_text2{
-    font-size:22px;
-    font-family: helvetica, arial, sans-serif;
-    font-weight:400;
-    max-width:430px;
-    margin:auto;
-    margin-bottom:10px;
-}
